# BitcoinExplorer

./: .env  docker-compose.yml  init.sql
.github/workflows/: ci-cd.yml
app/: Dockerfile  package-lock.json  package.json  tsconfig.json
app/src/: App.css  App.tsx  BlockDetail.css  BlockDetail.tsx  BlockHeight.css  BlockHeight.tsx  BlockHeightComponent.css  BlockHeightComponent.tsx  DifficultyAdjustment.tsx  MempoolGoggles.tsx  OffchainComponent.css  OffchainComponent.tsx  RealTimeChart.tsx  TransactionFees.tsx  index.css  index.tsx
ingestion/: Cargo.toml  Dockerfile  diesel.toml
ingestion/migrations/2024-06-04-175749_create_block_heights/: down.sql  up.sql
ingestion/migrations/2024-06-11-143431_create_block_info_table/: down.sql  up.sql
ingestion/migrations/2024-06-11-215041_add_transactions_and_inputs_outputs/: down.sql  up.sql
ingestion/migrations/2024-06-14-054954_create_offchain_data/: up.sql
ingestion/migrations/2024-06-14-065937_create_offchain_data/: down.sql
ingestion/src/: main.rs  schema.rs
