[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

